[JH] adds correct MIT license

--- a/payments/payments/conf/application.conf
+++ b/payments/payments/conf/application.conf
@@ -1,6 +1,6 @@
 mongodb.hosts = ["localhost:27017"]
 mongodb.username = ""
-mongodb.password = ""
+mongodb.password = password_removed
 mongodb.db = "paymentdb"
 
 payment.message.expired.period = "P2D"
@@ -11,22 +11,22 @@ worldPay.paymentService.url = "http://localhost:9020/start"
 #worldPay.paymentService.url = "https://secure-test.worldpay.com/jsp/merchant/xml/paymentService.jsp"
 
 worldPay.uk.username = UKMERCHANTCODE
-worldPay.uk.password = "password"
-worldPay.uk.macSecret = macsecret
+worldPay.uk.password = password_removed
+worldPay.uk.macSecret = password_removed
 worldPay.uk.regions = [uk]
 worldPay.uk.paymentTypes = [VISA-SSL, ECMC-SSL, AMEX-SSL, MAESTRO-SSL]
 worldPay.uk.installationId = installationId
 
 worldPay.china.username = CHINAMERCHANTCODE
-worldPay.china.password = "password"
-worldPay.china.macSecret = "macsecret"
+worldPay.china.password = password_removed
+worldPay.china.macSecret = password_removed
 worldPay.china.regions = [china]
 worldPay.china.paymentTypes = [VISA-SSL, ECMC-SSL]
 worldPay.china.installationId = installationId
 
 worldPay.china-apm.username = CHINAAPMMERCHANTCODE
-worldPay.china-apm.password = "password"
-worldPay.china-apm.macSecret = "macsecret"
+worldPay.china-apm.password = password_removed
+worldPay.china-apm.macSecret = password_removed
 worldPay.china-apm.regions = [china, APM]
 worldPay.china-apm.paymentTypes = [CHINAUNIONPAY-SSL, ALIPAY-SSL]
 worldPay.china-apm.installationId = installationId
